fixed how it looks on mobile

--- a/main.css
+++ b/main.css
@@ -2588,19 +2588,6 @@
 			border-top: 0;
 		}
 
-/* One */
-
-	#one:before {
-		background-image: url("../../images/banner.jpg");
-		background-position: top right;
-		background-repeat: no-repeat;
-		background-size: cover;
-		content: '';
-		display: block;
-		height: 0em;
-		width: 100%;
-	}
-
 /* Footer */
 
 	#footer {
